--- a/style/common/common.css
+++ b/style/common/common.css
@@ -114,7 +114,6 @@ body {
 
 .content {
   max-width: 100%;
-  overflow-x: hidden;
   width: 100%;
   color: #212121; }
   .content .m-s-title {
@@ -1232,7 +1231,7 @@ body {
               border-radius: 13px; } }
           @media screen and (max-width: 599px) {
             .content .letknow-app .text-area .buttons button {
-              margin-top: 13px; } }
+              margin: 13px 27px 0; } }
           .content .letknow-app .text-area .buttons button:hover {
             background-color: #0064AA;
             color: white !important; }
